--- a/quemsomos.html
+++ b/quemsomos.html
@@ -1,1 +1,90 @@
-<!--quem somos-->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <title>Quem Somos </title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/stylequemsomos.css'>
+    <script src='main.js'></script>
+</head>
+<body>
+    <main>
+    <header class="menu-principal">
+
+        <div class="logo">
+            <a href="index.html">
+                <img src="img/logo.png" alt="Dev Hunt"/>
+            </a><!--link-logo-->
+        </div><!--logo-->
+        <nav>
+            <div class="link-menu">
+                <ul>
+                    <li>
+                        <a href="#">Como Funciona</a>
+                    </li>
+
+                    <li>
+                        <a href="#">Encontre Trabalho</a>
+                    </li>
+
+                    <li>
+                        <a href="#">Ajuda</a>
+                    </li>
+                </ul><!---ul-->
+            </div><!--link-->
+
+            <div class="login-topo">
+                <ul>
+                    <li>
+                        <a href="#">Login</a>
+                    </li>
+                    <li>
+                        <a href="#">Cadastro</a>
+                    </li>
+                </ul><!--login-->
+            </div><!--login-topo-->
+
+            <div class="btn-topo">
+                <a href="#"><button>Publicar Projeto</button></a>
+            </div><!--botao-topo-->
+        </nav><!--links-->
+    </header><!--fim-menu-principal-->
+    
+    <div class="quemsomos">
+        <img class="grad1" src="img/mexendo no pc.jpeg" alt="mexendo pc"> 
+        <p>Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde</p>
+    </div>
+
+    <div class="quemsomos">
+        <p>Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde</p>
+        <img class="grad2" src="img/mexendo no pc.jpeg" alt="mexendo pc"> 
+    </div>
+
+    <div class="quemsomos">
+        <img class="grad3" src="img/mexendo no pc.jpeg" alt="mexendo pc"> 
+        <p>Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde Somos uma empresa aonde</p>
+    </div>
+</main>
+<br><br>
+</body>
+
+<footer>
+    <div class="interface">
+        <div class="footer-1">
+            <div class="flex">
+                <div class="btn-redes">
+                    <a href="#"><i class="bi bi-instagram"></i></a>
+                    <a href="#"><i class="bi bi-facebook"></i></a>
+                    <a href="#"><i class="bi bi-linkedin"></i></a>
+                </div><!--btn-redes-->
+            </div><!--flex-->
+        </div><!--footer-1-->
+
+        <div class="footer-2">
+            <p><i class="bi bi-envelope"></i><a href="mailto:contato@devhunt.com.br"> contato@devhunt.com.br</a></p>
+            <p class="desc">© 2024 www.devhunt.com.br | Todos os direitos reservados.</p>
+        </div><!--footer-2-->
+    </div><!--interface-->
+</footer><!--rodapé-->
+</body>
+</html><!--quem somos-->
