--- a/admin.html
+++ b/admin.html
@@ -1,15 +1,87 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-Admin.css">
-    <title>Admin</title>
-</head>
-<body>
-    <div class="Conteiner">
+    <title>Dev Hunt</title>
+    <link rel="shortcut icon" type="image/jpg" href="/img/favicon.ico" />
 
-    </div>
-    
-</body>
-</html>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+
+    <script src="/js/pginicial.js" defer></script>
+
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src=""></script>
+
+</head>
+
+<body>
+
+    <header class="menu-principal">
+
+        <div class="logo">
+            <a href="/index.html">
+                <img src="/img/logo.png" alt="Dev Hunt" />
+            </a><!--link-logo-->
+        </div><!--logo-->
+
+        <nav class="menu-desktop">
+            <ul>
+                <li>
+                    <a href="#">Contrate Freelancer</a>
+                </li>
+
+                <li>
+                    <a href="#">Encontre Trabalho</a>
+                </li>
+
+                <li>
+                    <a href="#">Ajuda</a>
+                </li>
+            </ul><!---ul-->
+        </nav><!--links-->
+
+        <div class="login-topo">
+            <ul>
+                <li>
+                    <a href="#">Login</a>
+                </li>
+                <li>
+                    <a href="#">Cadastro</a>
+                </li>
+            </ul><!--login-->
+        </div><!--login-topo-->
+
+        <div class="btn-topo btn">
+            <a href="#"><button>Publicar Projeto</button></a>
+        </div><!--botao-topo-->
+
+        <div class="acessibilidade">
+            <h6 class="acess">Acessibilidade</h6>
+            <div class="modo-escuro">
+                <div class="trilho" id="trilho">
+                    <div class="indicador">
+                    </div><!--indicador-->
+                </div><!--trilho-->
+            </div><!--modo-escuro-->
+
+            <div class="maior-menor" id="maior-menor">
+                <button type="button" id="btnAumentar">A+</button>
+                <button type="button" id="btnDiminuir">A-</button>
+            </div> <!--maior-menor--->
+        </div><!--acessibilidade-->
+
+        <div class="btn-abrir-menu" id="btn-menu">
+            <i class="bi bi-list"></i>
+        </div>
+
+        <div class="menu-mobile" id="menu-mobile">
+
+            <div class="btn-fechar">
+                <i class="bi bi-x-lg"></i>
+            </div><!--btn-fechar-->
