--- a/admin.html
+++ b/admin.html
@@ -2,86 +2,108 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dev Hunt</title>
-    <link rel="shortcut icon" type="image/jpg" href="/img/favicon.ico" />
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-
-    <script src="/js/pginicial.js" defer></script>
-
-    <script src="https://unpkg.com/scrollreveal"></script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src=""></script>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Página Administradora</title>
+  <link rel="stylesheet" href="/css/style-Admin.css"> 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
+  <header class="">
+    <div class="acessibilidade">
+      <h6 class="acess">Acessibilidade</h6>
+      <div class="modo-escuro">
+        <div class="trilho" id="trilho">
+          <div class="indicador"></div><!--indicador-->
+        </div><!--trilho-->
+      </div><!--modo-escuro-->
+      
+      <div class="maior-menor" id="maior-menor">
+        <button type="button" id="btnAumentar">A+</button>
+        <button type="button" id="btnDiminuir">A-</button>
+      </div> <!--maior-menor-->
+    </div><!--acessibilidade-->
 
-    <header class="menu-principal">
+    <div class="btn-abrir-menu" id="btn-menu">
+      <i class="bi bi-list"></i>
+    </div>
+  </header><!--fim-menu-principal-->
+  
+  <div class="container">
+    <nav class="menu-lateral">
+      <div class="btn-expandir">
+        <ul>
+          <li class="itens-menu">
+            <a href="#">
+              <span class="icons"><i class="bi bi-house-door"></i></span>
+              <span class="txt-link">Home</span>
+            </a>
+          </li>
+          <li class="itens-menu">
+            <a href="#">
+              <span class="icons"><i class="bi bi-columns-gap"></i></span>
+              <span class="txt-link">Dashboard</span>
+            </a>
+          </li>
+          <li class="itens-menu">
+            <a href="#">
+              <span class="icons"><i class="bi bi-calendar3"></i></span>
+              <span class="txt-link">Agenda</span>
+            </a>
+          </li>
+          <li class="itens-menu">
+            <a href="#">
+              <span class="icons"><i class="bi bi-gear"></i></span>
+              <span class="txt-link">Config</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-        <div class="logo">
-            <a href="/index.html">
-                <img src="/img/logo.png" alt="Dev Hunt" />
-            </a><!--link-logo-->
-        </div><!--logo-->
-
-        <nav class="menu-desktop">
-            <ul>
-                <li>
-                    <a href="#">Contrate Freelancer</a>
-                </li>
-
-                <li>
-                    <a href="#">Encontre Trabalho</a>
-                </li>
-
-                <li>
-                    <a href="#">Ajuda</a>
-                </li>
-            </ul><!---ul-->
-        </nav><!--links-->
-
-        <div class="login-topo">
-            <ul>
-                <li>
-                    <a href="#">Login</a>
-                </li>
-                <li>
-                    <a href="#">Cadastro</a>
-                </li>
-            </ul><!--login-->
-        </div><!--login-topo-->
-
-        <div class="btn-topo btn">
-            <a href="#"><button>Publicar Projeto</button></a>
-        </div><!--botao-topo-->
-
-        <div class="acessibilidade">
-            <h6 class="acess">Acessibilidade</h6>
-            <div class="modo-escuro">
-                <div class="trilho" id="trilho">
-                    <div class="indicador">
-                    </div><!--indicador-->
-                </div><!--trilho-->
-            </div><!--modo-escuro-->
-
-            <div class="maior-menor" id="maior-menor">
-                <button type="button" id="btnAumentar">A+</button>
-                <button type="button" id="btnDiminuir">A-</button>
-            </div> <!--maior-menor--->
-        </div><!--acessibilidade-->
-
-        <div class="btn-abrir-menu" id="btn-menu">
-            <i class="bi bi-list"></i>
+    <div class="main-content">
+      <div class="dashboard">
+        <div class="panel large">
+          <div class="title">Performance</div>
+          <div class="content">
+            <canvas id="chart1"></canvas>
+          </div>
         </div>
 
-        <div class="menu-mobile" id="menu-mobile">
+        <div class="panel medium">
+          <div class="title">Tube</div>
+          <div class="content">
+            <div id="tubeChart"></div>
+          </div>
+        </div>        
 
-            <div class="btn-fechar">
-                <i class="bi bi-x-lg"></i>
-            </div><!--btn-fechar-->
+        <div class="panel medium">
+          <div class="title">Saldo</div>
+          <div class="content">
+            <div class="stat">Funcionamento: 72%</div>
+            <div class="stat">Memory: 16GB</div>
+          </div>
+        </div>
+
+        <div class="panel medium">
+          <div class="title">Interação</div>
+          <div class="content">
+            <canvas id="chart2"></canvas>
+          </div>
+        </div>
+
+        <div class="panel small">
+          <div class="title">Conexão</div>
+          <div class="content">
+            <div class="stat">Novos Usuários: 5</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
