--- a/quemsomos.html
+++ b/quemsomos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freelancer Company</title>
+    <title>Quem Somos</title>
     <link rel="shortcut icon" type="image/jpg" href="/img/favicon.ico" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
