--- a/admin.html
+++ b/admin.html
@@ -34,6 +34,9 @@
   <div class="container">
     <nav class="menu-lateral">
       <div class="btn-expandir">
+        <i class="logo">
+            <img src="/img/logo.png" alt="Dev Hunt" />
+        </i>
         <ul>
           <li class="itens-menu">
             <a href="#">
@@ -73,11 +76,12 @@
         </div>
 
         <div class="panel medium">
-          <div class="title">Tube</div>
-          <div class="content">
-            <div id="tubeChart"></div>
+            <div class="title">Tube</div>
+            <div class="content">
+              <canvas id="tubeChart"></canvas>
+            </div>
           </div>
-        </div>        
+          
 
         <div class="panel medium">
           <div class="title">Saldo</div>
@@ -97,13 +101,13 @@
         <div class="panel small">
           <div class="title">Conexão</div>
           <div class="content">
-            <div class="stat">Novos Usuários: 5</div>
+            <canvas id="chart3"></canvas>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="\js\pagina-admin.js"></script>
 </body>
 </html>
