--- a/index.html
+++ b/index.html
@@ -52,14 +52,11 @@
                 <li>
                     <a href="ajuda.html">Ajuda</a>
                 </li>
-
-                <li class="login-topo">
-                    <a href="login.html">Login</a>
-                </li>
             </ul><!---ul-->
         </nav><!--links-->
 
         <div class="btn-topo btn">
+            <a href="#"><button class="login">Login</button></a>
             <a href="#"><button>Publicar Projeto</button></a>
         </div><!--botao-topo-->
 
