--- a/userfreela.html
+++ b/userfreela.html
@@ -22,6 +22,12 @@
 
         <nav class="menu-lateral">
 
+            <div class="logo-inicio">
+                <a href="index.html">
+                    <img src="/img/logo.png">
+                </a>
+            </div>
+
             <div class="btn-expandir">
                 <i class="bi bi-list" id="btn-exp"></i>
             </div><!--btn-expandir-->
