--- a/admin.html
+++ b/admin.html
@@ -77,11 +77,11 @@
 
         <div class="panel medium">
             <div class="title">Tube</div>
-            <div class="content">
-              <canvas id="tubeChart"></canvas>
+            <div class="content tube-center">
+              <div id="tubeChart"></div>
             </div>
           </div>
-          
+             
 
         <div class="panel medium">
           <div class="title">Saldo</div>
