--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <a href="#">Serviços<i class="bi bi-caret-down"></i></a>
 
                     <div class="dropdown-menu">
+                        <a href="planos.html">Planos</a>
                         <a href="login.html">Freelancer</a>
                         <a href="login.html">Empresas</a>
                     </div>
