--- a/planos.html
+++ b/planos.html
@@ -116,41 +116,43 @@
     </header><!--fim-menu-principal-->
 
     <main>
-        <section class="planos-container">
-            <h1>Escolha o plano ideal para você</h1>
-
+        <h1>Nossos Planos</h1>
+        <div class="planos-container">
             <div class="planos">
                 <div class="plano">
-                    <i class="bi bi-pc-display plano-icon"></i>
+                    <div class="plano-icon">
+                        <i class="bi bi-person-workspace"></i>
+                    </div>
                     <h2>Plano Freelancer</h2>
-                    <p>Perfeito para profissionais independentes que querem encontrar projetos e crescer no mercado.</p>
+                    <p><strong>R$ 24,99/mês</strong></p>
                     <ul>
-                        <li><i class="bi bi-check2-circle"></i>Maior Visibilidade</li>
-                                <li><i class="bi bi-check2-circle"></i>Acesso Prioritário a Projetos</li>
-                                <li><i class="bi bi-check2-circle"></i>Credibilidade Aumentada</li>
-                                <li><i class="bi bi-check2-circle"></i>Mais Convites Diretos</li>
-                                <li><i class="bi bi-check2-circle"></i>Ferramentas Exclusivas</li>
-                                <li><i class="bi bi-check2-circle"></i>Apoio e Suporte Personalizado</li>
+                        <li><i class="bi bi-star"></i>Acesso Prioritário a Projetos</li>
+                        <li><i class="bi bi-shield-check"></i>Credibilidade Aumentada</li>
+                        <li><i class="bi bi-envelope-heart"></i>Mais Convites Diretos</li>
+                        <li><i class="bi bi-tools"></i>Ferramentas Exclusivas</li>
+                        <li><i class="bi bi-person-bounding-box"></i>Apoio e Suporte Personalizado</li>
                     </ul>
-                    <button class="btn-plano">Escolher Plano</button>
+                    <button class="btn-plano">Assinar</button>
                 </div>
-
+                   
                 <div class="plano">
-                    <i class="bi bi-building-gear plano-icon"></i>
+                    <div class="plano-icon">
+                        <i class="bi bi-building"></i>
+                    </div>
                     <h2>Plano Empresa</h2>
-                    <p>Ideal para empresas que buscam freelancers qualificados para seus projetos e precisam de soluções rápidas.</p>
+                    <p><strong>R$ 49,99/mês</strong></p>
                     <ul>
-                        <li><i class="bi bi-check2-circle"></i>Acesso a Talentos Qualificados</li>
-                                <li><i class="bi bi-check2-circle"></i>Economia de Tempo</li>
-                                <li><i class="bi bi-check2-circle"></i>Maior Garantia de Entrega</li>
-                                <li><i class="bi bi-check2-circle"></i>Filtragem Avançada</li>
-                                <li><i class="bi bi-check2-circle"></i>Suporte Prioritário</li>
-                                <li><i class="bi bi-check2-circle"></i>Relatórios e Insights</li>
+                        <li><i class="bi bi-person-check"></i>Acesso a Talentos Qualificados</li>
+                        <li><i class="bi bi-clock-history"></i>Economia de Tempo</li>
+                        <li><i class="bi bi-file-earmark-check"></i>Maior Garantia de Entrega</li>
+                        <li><i class="bi bi-filter"></i>Filtragem Avançada</li>
+                        <li><i class="bi bi-headset"></i>Suporte Prioritário</li>
+                        <li><i class="bi bi-graph-up-arrow"></i>Relatórios e Insights</li>
                     </ul>
-                    <button class="btn-plano">Escolher Plano</button>
+                    <button class="btn-plano">Assinar</button>
                 </div>
             </div>
-        </section>
+        </div>
     </main>
 
     <footer>
