--- a/ajuda.html
+++ b/ajuda.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="css/acessibilidade.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="/js/acessibilidade.js" defer></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src=""></script>
 </head>
 <body>
     <header class="menu-principal">
@@ -116,7 +119,7 @@
                 </div> <!--maior-menor-->
             </div><!--acessibilidade-->
         </div><!--btn-fixo-->
-        
+
         <div id="content">
             <section class="Bemvindo">
                 <h1>Olá, Estamos aqui para ajudar.</h1>
