--- a/planos.html
+++ b/planos.html
@@ -118,8 +118,8 @@
                 </div> <!--maior-menor-->
             </div><!--acessibilidade-->
         </div><!--btn-fixo-->
-
-        <h1>Nossos Planos</h1>
+        <div id="content">
+            <h1>Nossos Planos</h1>
         <div class="planos-container">
             <div class="planos">
                 <div class="plano">
@@ -156,6 +156,8 @@
                 </div>
             </div>
         </div>
+        </div>
+        
     </main>
 
     <footer>
