--- a/quemsomos.html
+++ b/quemsomos.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/stylequemsomos.css">
     <link rel="stylesheet" type="text/css" href="css/acessibilidade.css">
 
     <script src="/js/pginicial.js" defer></script>
