--- a/cadastro.html
+++ b/cadastro.html
@@ -86,7 +86,7 @@ for="confirmSenha">Confirmar Senha</label>
                 <label for="outros">Outros</label>
             </div>
 
-            <div class="justify-center">
+            <div class="enter">
                 <input type="submit" name="submit" id="submit" value="Cadastrar">
             </div>
         </form>
