--- a/cadastro.html
+++ b/cadastro.html
@@ -91,5 +91,17 @@ for="confirmSenha">Confirmar Senha</label>
             </div>
         </form>
     </div>
+
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
+      
 </body>
 </html>
