--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
   <title>Página Administradora</title>
   <link rel="stylesheet" href="/css/style-Admin.css"> 
   <link rel="stylesheet" type="text/css" href="css/userfreela.css">
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/css/acessibilidade.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -100,6 +100,13 @@
                     <div id="tubeChart"></div>
                   </div>
                 </div>
+
+                <div class="panel medium">
+                    <div class="title">Interação</div>
+                    <div class="content">
+                      <canvas id="chart2"></canvas>
+                    </div>
+                  </div>
                    
               <div class="panel medium">
                 <div class="title">Saldo</div>
