--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
         </form>
 
         <div class="register-section">
-            <p>Não tem uma conta? <a href="cadastro.html" onclick="redirectToRegister()">Cadastre-se aqui</a></p> <!-- Redirecionamento via JS -->
+            <p>Não tem uma conta? <a href="cadastro.php" onclick="redirectToRegister()">Cadastre-se aqui</a></p> <!-- Redirecionamento via JS -->
         </div>
     </div>
     <div class="btn-fixo" id="btn-fixo">
