--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
                     <div class="dropdown-menu">
                         <a href="planos.html">Planos</a>
-                        <a href="login.html">Freelancer</a>
-                        <a href="login.html">Empresas</a>
+                        <a href="login.php">Freelancer</a>
+                        <a href="login.php">Empresas</a>
                     </div>
                 </li>
 
@@ -59,9 +59,9 @@
         </nav><!--links-->
 
         <div class="btn-topo btn">
-            <a class="login-btn" href="login.html">Olá <span id="username">Visitante</span>, seja bem-vindo</a>
+            <a class="login-btn" href="login.php">Olá <span id="username">Visitante</span>, seja bem-vindo</a>
             <a class="btn-logout" href="#" id="logout-btn" style="display: none;">Logout</a>
-            <a href="login.html"><button>Publicar Projeto</button></a>
+            <a href="login.php"><button>Publicar Projeto</button></a>
         </div><!--botao-topo-->
 
         <!--menu-mobile-->
@@ -96,7 +96,7 @@
                     </li>
 
                     <li>
-                        <a href="login.html">Publicar Projeto</a>
+                        <a href="login.php">Publicar Projeto</a>
                     </li>
                 </ul><!---ul-->
             </nav><!--links-->
