--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/css/acessibilidade.css">
+    <link rel="stylesheet" type="text/css" href="/Dev-Hunt/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/Dev-Hunt/css/acessibilidade.css">
 
-    <script src="/js/pginicial.js" defer></script>
-    <script src="/js/acessibilidade.js" defer></script>
+    <script src="/Dev-Hunt//js/pginicial.js" defer></script>
+    <script src="/Dev-Hunt//js/acessibilidade.js" defer></script>
 
     <script src="https://unpkg.com/scrollreveal"></script>
 
@@ -28,7 +28,7 @@
 
         <div class="logo">
             <a href="/index.html">
-                <img id="imagemAcessibilidade" src="/img/logo.png" alt="Dev Hunt" />
+                <img id="imagemAcessibilidade" src="/Dev-Hunt/img/logo.png" alt="Dev Hunt" />
             </a><!--link-logo-->
         </div><!--logo-->
 
@@ -47,8 +47,8 @@
 
                     <div class="dropdown-menu">
                         <a href="planos.html">Planos</a>
-                        <a href="login.html">Freelancer</a>
-                        <a href="login.html">Empresas</a>
+                        <a href="login.php">Freelancer</a>
+                        <a href="login.php">Empresas</a>
                     </div>
                 </li>
 
