--- a/userfreela.html
+++ b/userfreela.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Freelancer</title>
-    <link rel="shortcut icon" type="image/jpg" href="/img/favicon.ico" />
+    <link rel="shortcut icon" type="image/jpg" href="img/favicon.ico" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -24,7 +24,7 @@
 
             <div class="logo-inicio">
                 <a href="index.html">
-                    <img src="/img/logo.png">
+                    <img src="img/logo.png">
                 </a>
             </div>
 
@@ -62,7 +62,7 @@
             </ul>
         </nav><!--menu-lateral-->
     
-        <script src="/js/userempresa.js"></script>
+        <script src="js/userempresa.js"></script>
 
     </header><!--fim-menu-principal-->
 
