--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
   <title>Página Administradora</title>
   <link rel="stylesheet" href="/Dev-Hunt/css/style-Admin.css">
   
-  <script src="/Dev-Hunt/js/acessibilidade.js" defer></script>
+  <script src="js/admin.js" defer></script>
  
   <link rel="stylesheet" type="text/css" href="/Dev-Hunt/css/userfreela.css">
   <link rel="stylesheet" type="text/css" href="/Dev-Hunt/css/acessibilidade.css">
