--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freelancer Company</title>
+    <title>Dev Hunt</title>
     <link rel="shortcut icon" type="image/jpg" href="/img/favicon.ico" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <link rel="stylesheet" type="text/css" href="/Dev-Hunt/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/Dev-Hunt/css/acessibilidade.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/acessibilidade.css">
 
-    <script src="/Dev-Hunt//js/pginicial.js" defer></script>
-    <script src="/Dev-Hunt//js/acessibilidade.js" defer></script>
+    <script src="/js/pginicial.js" defer></script>
+    <script src="/js/acessibilidade.js" defer></script>
 
     <script src="https://unpkg.com/scrollreveal"></script>
 
@@ -28,7 +28,7 @@
 
         <div class="logo">
             <a href="/index.html">
-                <img id="imagemAcessibilidade" src="/Dev-Hunt/img/logo.png" alt="Dev Hunt" />
+                <img id="imagemAcessibilidade" src="/img/logo.png" alt="Dev Hunt" />
             </a><!--link-logo-->
         </div><!--logo-->
 
