--- a/index.html
+++ b/index.html
@@ -380,6 +380,8 @@
         
     </div><!--content-->
 
+    <!--botão de libras-->
+
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
         <div vw-plugin-wrapper>
@@ -390,6 +392,8 @@
       <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
       </script>
+
+     <!--botão de libras-->
     
         <footer>
             <div class="interface">
