--- a/useroufreela.html
+++ b/useroufreela.html
@@ -18,8 +18,9 @@
             </a>
         </div>
             <div class="escolha">
-                <button class="empresa">Empresa</button>
-                <button class="freela">Freelancer</button>
+                <a href="login.php">
+                <button class="empresa">Empresa</button></a>
+                <a href="login.php"><button class="freela">Freelancer</button></a>
             </div>
     </div>
     <div class="btn-fixo" id="btn-fixo">
