--- a/useroufreela.html
+++ b/useroufreela.html
@@ -21,8 +21,8 @@
             </div><!--logo-->
 
             <div class="escolha">
-                <button class="empresa">Empresa</button>
-                <button class="freela">Freelancer</button>
+                <a href="login.php"><button>Empresa</button></a>
+                <a href="login.php"><button>Freelancer</button></a>
             </div>
 
         </div>
