--- a/ajuda.html
+++ b/ajuda.html
@@ -119,8 +119,8 @@
                 </div> <!--maior-menor-->
             </div><!--acessibilidade-->
         </div><!--btn-fixo-->
-
         <div id="content">
+        
             <section class="Bemvindo">
                 <h1>Olá, Estamos aqui para ajudar.</h1>
                 <div class="Barra">
@@ -153,8 +153,10 @@
                     <div class="topico">Projetos e oportunidades</div>
                 </div>
             </section>
-        </main>
+        </div>
+    </main>
     
+    <div id="content">
         <aside class="ajuda1">
             <h2>Outras maneiras pelas quais podemos ajudar</h2>
             <div class="ajuda2">
@@ -169,6 +171,7 @@
             </div>
         </aside>
         </div>
+    </div>
 
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
