--- a/userempresa.html
+++ b/userempresa.html
@@ -24,11 +24,11 @@
 
         <nav class="menu-lateral">
 
-            <div class="logo-inicio">
-                <a href="index.html">
-                    <img src="/img/logo.png">
-                </a>
-            </div>
+            <div class="logo-ue">
+                <a href="/index.html">
+                    <img id="imagemAcessibilidade" src="/img/logo.png" alt="Dev Hunt" />
+                </a><!--link-logo-->
+            </div><!--logo-->
 
             <div class="btn-expandir">
                 <i class="bi bi-list" id="btn-exp"></i>
