--- a/index.html
+++ b/index.html
@@ -92,11 +92,15 @@
                     </li>
 
                     <li>
-                        <a href="ajuda.html">Ajuda</a>
+                        <a href="planos.html">Planos</a>
                     </li>
 
                     <li>
                         <a href="login.php">Publicar Projeto</a>
+                    </li>
+
+                    <li>
+                        <a href="ajuda.html">Ajuda</a>
                     </li>
                 </ul><!---ul-->
             </nav><!--links-->
