--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                 <ul>
 
                     <li>
-                        <a class="btn-login" href="#"><i class="bi bi-person-square"></i>Olá, seja bem-vindo</a>
+                        <a class="btn-login" href="login.php"><i class="bi bi-person-square"></i>Olá <span id="username">Visitante</span>, seja bem-vindo</a>
+                         <a class="btn-logout" href="#" id="logout-btn" style="display: none;">Logout</a>
                     </li>
 
                     <li>
