--- a/useroufreela.html
+++ b/useroufreela.html
@@ -19,10 +19,12 @@
                     <img id="imagemAcessibilidade" src="/img/logo.png" alt="Dev Hunt" />
                 </a><!--link-logo-->
             </div><!--logo-->
-
+            <div class="entrar">
+                <h2>Como Deseja Entrar?</h2>
+            </div>
             <div class="escolha">
-                <a href="login.php"><button>Empresa</button></a>
-                <a href="login.php"><button>Freelancer</button></a>
+                <a href="cadastroempresa.php"><button>Empresa</button></a>
+                <a href="cadastro.php"><button>Freelancer</button></a>
             </div>
 
         </div>
