--- a/admin.html
+++ b/admin.html
@@ -27,26 +27,20 @@
             <ul>
                 <li class="item-menu">
                     <a href="index.html">
-                        <span class="icon"><i class="bi bi-house" title="Início"></i></span>
-                        <span class="txt-link">Início</span>
+                        <span class="icon"><i class="bi bi-columns-gap" title="Início"></i></span>
+                        <span class="txt-link">Dashboard</span>
                     </a>
                 </li>
                 <li class="item-menu">
                     <a href="quemsomos.html">
-                        <span class="icon"><i class="bi bi-file-person" title="quemsomos"></i></span>
-                        <span class="txt-link">Sobre</span>
+                        <span class="icon"><i class="bi bi-calendar3" title="quemsomos"></i></span>
+                        <span class="txt-link">Calendario</span>
                     </a>
                 </li>
                 <li class="item-menu">
                     <a href="ajuda.html">
-                        <span class="icon"><i class="bi bi-info-circle-fill"></i></span>
-                        <span class="txt-link">Ajuda</span>
-                    </a>
-                </li>
-                <li class="item-menu">
-                    <a href="ajuda.html">
-                        <span class="icon"><i class="bi bi-clipboard-check-fill"></i></span>
-                        <span class="txt-link">Planos</span>
+                        <span class="icon"><i class="bi bi-gear"></i></span>
+                        <span class="txt-link">Configuração</span>
                     </a>
                 </li>
             </ul>
@@ -93,8 +87,8 @@
                 <div class="panel medium">
                     <div class="title">Saldo</div>
                     <div class="content">
-                        <div class="stat">Funcionamento: 72%</div>
-                        <div class="stat">Memory: 16GB</div>
+                        <div class="stat"></div>
+                        <canvas id="myChart" width="400" height="200"></canvas>
                     </div>
                 </div>
                 <div class="panel medium">
