atl banco de dados

--- a/admin.html
+++ b/admin.html
@@ -28,7 +28,7 @@
                 <li class="item-menu">
                     <a href="index.html">
                         <span class="icon"><i class="bi bi-columns-gap" title="Início"></i></span>
-                        <span class="txt-link">Dashboard</span>
+                        <span class="txt-link">Início</span>
                     </a>
                 </li>
                 <li class="item-menu">
@@ -39,8 +39,14 @@
                 </li>
                 <li class="item-menu">
                     <a href="ajuda.html">
-                        <span class="icon"><i class="bi bi-gear"></i></span>
-                        <span class="txt-link">Configuração</span>
+                        <span class="icon"><i class="bi bi-info-circle-fill"></i></span>
+                        <span class="txt-link">Ajuda</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="ajuda.html">
+                        <span class="icon"><i class="bi bi-clipboard-check-fill"></i></span>
+                        <span class="txt-link">Planos</span>
                     </a>
                 </li>
             </ul>
@@ -64,6 +70,30 @@
             </div><!--acessibilidade-->
         </div><!--btn-fixo-->
 
+        <div class="cardBox">
+            <div class="card">
+                <div>
+                    <div class="numbers">1,754</div>
+                    <div class="card-name">daile viws</div>
+                </div>
+                <div class="iconsBx">
+                    <span class="icon"><i class="bi bi-info-circle-fill"></i></span>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <div class="numbers">depois</div>
+                    <div class="card-name">depois</div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <div class="numbers">depois</div>
+                    <div class="card-name">depois</div>
+                </div>
+            </div>
+        </div>
+        <!--d-->
         <div class="main-content">
             <div class="dashboard">
                 <div class="panel large">
