atl banco de dados

--- a/pagerro.html
+++ b/pagerro.html
@@ -1,13 +1,11 @@
-<?php
-http_response_code(404); // Define o código de resposta como 404
-?>
+
 
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/Pg-Erro404.css">
+    <link rel="stylesheet" type="text/css" href="/Dev-Hunt/css/Pg-Erro404.css">
     <title>Erro</title>
 </head>
 <body>
@@ -129,20 +127,20 @@ http_response_code(404); // Define o código de resposta como 404
                 <span style="--i:51"></span>
                 <span style="--i:16"></span>
                 <span style="--i:40"></span>
-                <span style="--i:5"></span>
-                <span style="--i:71"></span>
-                <span style="--i:12"></span>
-                <span style="--i:20"></span>
-                <span style="--i:35"></span>
-                <span style="--i:1"></span>
+                <span style="--i:52"></span>
                 <span style="--i:91"></span>
-                <span style="--i:9"></span>
+                <span style="--i:2"></span>
+                <span style="--i:29"></span>
+                <span style="--i:75"></span>
+                <span style="--i:14"></span>
+                <span style="--i:91"></span>
+                <span style="--i:94"></span>
                 <span style="--i:75"></span>
                 <span style="--i:81"></span>
-                <span style="--i:14"></span>
-                <span style="--i:60"></span>
+                <span style="--i:13"></span>
+                <span style="--i:62"></span>
                 <span style="--i:25"></span>
-                <span style="--i:55"></span>
+                <span style="--i:54"></span>
     </header>
     
     <main class="main">
