atualizações das pastas

--- a/2FA.html
+++ b/2FA.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autentificação de dois fatores</title>
-    <link rel="stylesheet" href="/css/2FA.css">
-    <script src="/js/alt.js" defer></script>
-    <link rel="stylesheet" type="text/css" href="/css/acessibilidade.css">
-    <script src="/js/acessibilidade.js" defer></script>
+    <link rel="stylesheet" href="style-2FA.css">
+    <script src="script-alt.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="style-acessibilidade.css">
+    <script src="script-acessibilidade.js" defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src=""></script>
 </head>
@@ -17,7 +17,7 @@
 
         <div class="logo">
             <a href="/index.html">
-                <img id="imagemAcessibilidade" src="/img/logo.png" alt="Dev Hunt" />
+                <img id="imagemAcessibilidade" src="img-logo.png" alt="Dev Hunt" />
             </a><!--link-logo-->
         </div><!--logo-->
 
@@ -119,7 +119,7 @@
 
     <div class="alterar-senha-container">
         <div class="logo-container">
-            <img src="img/logo.png" alt="Dev Hunt Logo" class="logo">
+            <img src="img-logo.png" alt="Dev Hunt Logo" class="logo">
         </div>
 
         <h2>Alterar Senha</h2>
