--- a/alterarsenha.html
+++ b/alterarsenha.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alterar Senha</title>
-    <link rel="stylesheet" href="/css/alterarsenha.css">
-    <link rel="stylesheet" type="text/css" href="/css/acessibilidade.css">
-    <script src="/js/acessibilidade.js" defer></script>
+    <link rel="stylesheet" href="style-alterarsenha.css">
+    <link rel="stylesheet" type="text/css" href="style-acessibilidade.css">
+    <script src="script-acessibilidade.js" defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src=""></script>
 </head>
@@ -16,7 +16,7 @@
 
         <div class="logo">
             <a href="/index.html">
-                <img id="imagemAcessibilidade" src="/img/logo.png" alt="Dev Hunt" />
+                <img id="imagemAcessibilidade" src="img-logo.png" alt="Dev Hunt" />
             </a><!--link-logo-->
         </div><!--logo-->
 
@@ -118,7 +118,7 @@
 
     <div class="alterar-senha-container">
         <div class="logo-container">
-            <img src="img/logo.png" alt="Dev Hunt Logo" class="logo">
+            <img src="img-logo.png" alt="Dev Hunt Logo" class="logo">
         </div>
 
         <h2>Alterar Senha</h2>
@@ -146,7 +146,7 @@
         <div class="login-section">
         </div>
     </div>
-    <script src="alt.js"></script>
+    <script src="-script-alt.js"></script>
 
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
