--- a/cadastro-empresa.html
+++ b/cadastro-empresa.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-cadastro-empresa.css">
 </head>
 <body>
     <div class="container">
         <div class="logo-container">
-            <img src="logo." alt="Logo" class="logo">
+            <img src="img-logo.png" alt="Logo" class="logo">
         </div>
 
         <form id="cadastroForm">
@@ -51,7 +51,7 @@
         <div id="mensagem"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script-cadastroempresa.js"></script>
 
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
