--- a/pagerro.html
+++ b/pagerro.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/Dev-Hunt/css/Pg-Erro404.css">
+    <link rel="stylesheet" type="text/css" href="style-pgErro404.css">
     <title>Erro</title>
 </head>
 <body>
@@ -151,7 +151,7 @@
                 <a href="#" class="btn">Recarregar</a>
             </div>
             <div class="right">
-                <img src="/Dev-Hunt/img/astronauta.png" alt="Imagem de erro 404">
+                <img src="img-astronauta.png" alt="Imagem de erro 404">
                 <div class="shadow"></div>
             </div>
                     
