--- a/userfreela.html
+++ b/userfreela.html
@@ -20,10 +20,10 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <link rel="stylesheet" type="text/css" href="css/userfreela.css">
+    <link rel="stylesheet" type="text/css" href="style-userfreela.css">
 
-    <link rel="stylesheet" type="text/css" href="/css/acessibilidade.css">
-    <script src="/js/acessibilidade.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="style-acessibilidade.css">
+    <script src="script-acessibilidade.js" defer></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src=""></script>
@@ -38,7 +38,7 @@
 
             <div class="logo-uf">
                 <a href="/index.html">
-                    <img id="imagemAcessibilidade" src="/img/logo.png" alt="Dev Hunt" />
+                    <img id="imagemAcessibilidade" src="img-logo.png" alt="Dev Hunt" />
                 </a><!--link-logo-->
             </div><!--logo-->
 
@@ -84,7 +84,7 @@
             </ul>
         </nav><!--menu-lateral-->
     
-        <script src="js/userempresa.js"></script>
+        <script src="script-userempresa.js"></script>
 
     </header><!--fim-menu-principal-->
 
