--- a/admin.html
+++ b/admin.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Administradora</title>
-    <link rel="stylesheet" href="/Dev-Hunt/css/style-Admin.css">
+    <link rel="stylesheet" href="/style-Admin.css">
 
-    <script src="/Dev-Hunt/js/acessibilidade.js" defer></script>
+    <script src="/script-acessibilidade.js" defer></script>
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -18,7 +18,7 @@
         <nav class="menu-lateral">
             <div class="logo-inicio">
                 <a href="index.html">
-                    <img src="/Dev-Hunt/img/logo.png">
+                    <img src="img-logo.png">
                 </a>
             </div>
             <div class="btn-expandir">
@@ -137,7 +137,7 @@
         </div>
     </main>
 
-    <script src="/Dev-Hunt/js/pagina-admin.js"></script>
+    <script src="/pagina-admin.js"></script>
 </body>
 
 </html>
