--- a/ajuda.html
+++ b/ajuda.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevHunt - Ajuda</title>
-    <link rel="stylesheet" type="text/css" href="css/style-ajuda.css">
-    <link rel="stylesheet" type="text/css" href="css/acessibilidade.css">
+    <link rel="stylesheet" type="text/css" href="style-ajuda.css">
+    <link rel="stylesheet" type="text/css" href="style-acessibilidade.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="/js/acessibilidade.js" defer></script>
+    <script src="script-acessibilidade.js" defer></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src=""></script>
@@ -17,7 +17,7 @@
 
         <div class="logo">
             <a href="/index.html">
-                <img id="imagemAcessibilidade" src="/img/logo.png" alt="Dev Hunt" />
+                <img id="imagemAcessibilidade" src="img-logo.png" alt="Dev Hunt" />
             </a><!--link-logo-->
         </div><!--logo-->
 
