--- a/quemsomos.html
+++ b/quemsomos.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem Somos</title>
-    <link rel="shortcut icon" type="image/jpg" href="/img/favicon.ico" />
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <link rel="stylesheet" type="text/css" href="/css/stylequemsomos.css">
-    <link rel="stylesheet" type="text/css" href="/css/acessibilidade.css">
+    <link rel="stylesheet" type="text/css" href="style-quemsomos.css">
+    <link rel="stylesheet" type="text/css" href="style-acessibilidade.css">
 
-    <script src="/js/acessibilidade.js" defer></script>
+    <script src="script-acessibilidade.js" defer></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src=""></script>
@@ -25,7 +25,7 @@
 
         <div class="logo">
             <a href="/index.html">
-                <img id="imagemAcessibilidade" src="/img/logo.png" alt="Dev Hunt" />
+                <img id="imagemAcessibilidade" src="img-logo.png" alt="Dev Hunt" />
             </a><!--link-logo-->
         </div><!--logo-->
 
@@ -132,7 +132,7 @@
         <section class="quem-somos">
             <div class="video-topo">
                 <video autoplay muted loop>
-                    <source src="/img/apertomao.mp4" type="video/mp4">
+                    <source src="img-apertomao.mp4" type="video/mp4">
                 </video>
             </div><!---video-topo--->
                    
