--- a/useroufreela.html
+++ b/useroufreela.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="css/empresaoufreela.css">
-    <link rel="stylesheet" href="css/acessibilidade.css">
+    <link rel="stylesheet" href="empresaoufreela.css">
+    <link rel="stylesheet" href="style-acessibilidade.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="/js/login.js" defer></script>
-    <script src="/js/acessibilidade.js" defer></script>
+    <script src="login.js" defer></script>
+    <script src="script-acessibilidade.js" defer></script>
 </head>
 <body>
     <main>
@@ -16,7 +16,7 @@
 
             <div class="logo-ef">
                 <a href="/index.html">
-                    <img id="imagemAcessibilidade" src="/img/logo.png" alt="Dev Hunt" />
+                    <img id="imagemAcessibilidade" src="img-logo.png" alt="Dev Hunt" />
                 </a><!--link-logo-->
             </div><!--logo-->
             <div class="entrar">
