--- a/userempresa.html
+++ b/userempresa.html
@@ -45,19 +45,19 @@
                 <li class="item-menu ativo">
                     <a href="userempresa.html">
                         <span class="icon"><i class="bi bi-bar-chart-steps"></i></span>
-                        <span class="txt-link" href="index.html">Feed</span>
+                        <span class="txt-link" href="index.html">Propostas</span>
                     </a>
                 </li>
                 
                 <li class="item-menu">
                     <a href="quemsomos.html">
                         <span class="icon"><i class="bi bi-file-person" title="quemsomos"></i></span>
-                        <span class="txt-link">Sobre</span>
+                        <span class="txt-link">Perfil</span>
                     </a>
                 </li>
 
                 <li class="item-menu">
-                    <a href="planos.html">
+                    <a href="planos-empresa.html">
                         <span class="icon"><i class="bi bi-clipboard-check-fill"></i></span>
                         <span class="txt-link">Planos</span>
                     </a>
@@ -65,7 +65,7 @@
     
                 <li class="item-menu">
                     <a href="ajuda.html">
-                        <span class="icon"><i class="bi bi-info-circle-fill"></i></span>
+                        <span class="icon"><i class="bi bi-chat-left-dots"></i></span>
                         <span class="txt-link">Ajuda</span>
                     </a>
                 </li>
