--- a/planos-empresa.html
+++ b/planos-empresa.html
@@ -95,11 +95,11 @@
                 <div class="planos">
                     <div class="plano">
                         <div class="plano-icon">
-                            <i class="bi bi-building"></i>
+                            <i class="bi bi-calendar-date"></i>
                         </div>
                         <div class ="plano1">
                         <h2>Plano Mensal</h2>
-                        <p><strong>R$ 49,99/mês</strong></p>
+                        <p><strong>R$ 49,99</strong></p>
                         <ul>
                             <li><i class="bi bi-person-check"></i>Acesso a Talentos Qualificados</li>
                             <li><i class="bi bi-clock-history"></i>Economia de Tempo</li>
@@ -114,11 +114,11 @@
                        
                     <div class="plano">
                         <div class="plano-icon">
-                            <i class="bi bi-building"></i>
+                            <i class="bi bi-calendar-date"></i>
                         </div>
                         <div class ="plano1">
                         <h2>Plano Semestral</h2>
-                        <p><strong>R$ 279,99/mês </strong></p>
+                        <p><strong>R$ 279,99</strong></p>
                         <ul>
                             <li><i class="bi bi-person-check"></i>Acesso a Talentos Qualificados</li>
                             <li><i class="bi bi-clock-history"></i>Economia de Tempo</li>
@@ -132,11 +132,11 @@
                     </div>
                     <div class="plano">
                         <div class="plano-icon">
-                            <i class="bi bi-building"></i>
+                            <i class="bi bi-calendar-date"></i>
                         </div>
                         <div class ="plano1">
                         <h2>Plano Anual</h2>
-                        <p><strong>R$ 539,99/mês </strong></p>
+                        <p><strong>R$ 539,99</strong></p>
                         <ul>
                             <li><i class="bi bi-person-check"></i>Acesso a Talentos Qualificados</li>
                             <li><i class="bi bi-clock-history"></i>Economia de Tempo</li>
